feat: Add CMP MCP Server implementation
- Create CMP API client with HMAC-SHA256 authentication
- Add query_sim_list and query_sim_detail MCP tools
- Implement secure environment variable configuration
- Add comprehensive documentation and deployment guide
- Configure Cloudflare Workers secrets for sensitive data
- Remove hardcoded credentials for security

Features:
- Query SIM cards with filtering (status, date range, ICCID, etc.)
- Get detailed SIM information including usage statistics
- Secure HMAC-SHA256 API authentication
- Environment variable validation
- MCP protocol compatibility

Security improvements:
- Environment variables for credentials
- .gitignore updated for sensitive files
- .env.example template provided
- Cloudflare Workers secrets integration

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -24,5 +24,8 @@
 	},
 	"observability": {
 		"enabled": true
+	},
+	"vars": {
+		"CMP_ENDPOINT": "https://cmp.acceleronix.io/gateway/openapi"
 	}
 }
