fix: Resolve environment variables and API endpoint configuration
- Fix Cloudflare Workers environment variable naming conflicts
- Rename CMP_APP_KEY → CMP_API_KEY, CMP_APP_SECRET → CMP_API_SECRET
- Rename CMP_ENDPOINT → CMP_API_ENDPOINT to avoid binding conflicts
- Add comprehensive debug logging for environment variables
- Add detailed HTTP request/response logging for API calls
- Resolve 405 Method Not Allowed errors by fixing secret configuration

Environment variable setup:
- CMP_API_KEY and CMP_API_SECRET are now properly configured as Workers secrets
- CMP_API_ENDPOINT configured as environment variable in wrangler.jsonc
- All variables now load correctly in Durable Objects context

Debug improvements:
- Log all available environment keys and values
- Track HTTP request details (method, URL, headers, body)
- Log API response status and error details
- Better error messages for troubleshooting

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -26,6 +26,6 @@
 		"enabled": true
 	},
 	"vars": {
-		"CMP_ENDPOINT": "https://cmp.acceleronix.io/gateway/openapi"
+		"CMP_API_ENDPOINT": "https://cmp.acceleronix.io/gateway/openapi"
 	}
 }
